Fixed sizing of the icons and aligned the login button with them

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,13 +11,15 @@
 }
 
 .Header .right{
+    display: flex;
+    align-items: center;
     margin-right: 2%;
     font-size: 1.5rem;
 }
 
 .Header .right .icon{
     color: #F2D658;
-    padding-right: 20px;
+    margin: 10px;
     font-size: 33px;
 }
 
